k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delivery-ingress
  namespace: delivery
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  name: http
          - path: /shipments
            pathType: Prefix
            backend:
              service:
                name: shipment-service
                port:
                  name: http
          - path: /couriers
            pathType: Prefix
            backend:
              service:
                name: dispatch-service
                port:
                  name: http
          - path: /tracking
            pathType: Prefix
            backend:
              service:
                name: tracking-service
                port:
                  name: http
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  name: http
